--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.88MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-210.1KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-7.41MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.48MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.90MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.41MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.87MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-204.8KB/s(Youtube:不良林), server: zj.haojiahuo.ml, port: 30044, type: vmess, uuid: 0bff49b2-6e66-3572-897b-9d16ce612965, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /videos, ws-headers: {Host: zj.haojiahuo.ml}}
+  - {name: 🇨🇳 中国-2.71MB/s(Youtube:不良林), server: zj.haojiahuo.ml, port: 30069, type: vmess, uuid: 0bff49b2-6e66-3572-897b-9d16ce612965, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /videos, ws-headers: {Host: zj.haojiahuo.ml}}
+  - {name: 🇨🇳 中国-7.78MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1.37MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-426.8KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-2.22MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1.02MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.62MB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.03MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-523.0KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-210.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.41MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-426.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-523.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-210.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.41MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-426.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-523.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-210.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.41MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-426.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-523.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.03MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-210.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.41MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-426.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-523.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-210.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.41MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-426.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-523.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-210.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.41MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-426.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-523.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-210.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.41MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-204.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-426.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.03MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-523.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
