--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-1.02MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-742.0KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.74MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.84MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.70MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.00MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-286.0KB/s(Youtube:不良林), server: 103.172.116.113, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇳 中国-7.46MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇳 中国-6.93MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.64MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-991.9KB/s(Youtube:不良林), server: gycd1.csccdd.xyz, port: 52340, type: vmess, uuid: 1dc13504-e4ba-3c49-8e0b-6a3eb4e40335, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: gycd1.csccdd.xyz}}
-  - {name: 🇮🇳 印度-1.42MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-6.79MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-449.3KB/s(Youtube:不良林), server: 120.233.186.71, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.53MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-742.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-286.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-991.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-742.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-286.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-991.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-742.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-286.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-991.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-742.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-286.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-991.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-742.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-286.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-991.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-742.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-286.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-991.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-742.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-286.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-991.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-449.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.53MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
