--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-11.12MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-8.01MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-161.1KB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20006, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.70MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.33MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-558.3KB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.57MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.23MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-12.41MB/s(Youtube:不良林), server: yp-cm-002.omo-m0m.com, port: 5703, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: yp-cm-002.omo-m0m.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.79MB/s(Youtube:不良林), server: 120.233.186.71, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.86MB/s(Youtube:不良林), server: 103.56.62.145, port: 3385, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.10MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-924.3KB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.37MB/s(Youtube:不良林), server: 103.56.62.145, port: 3385, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.85MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: f0de3134-aef4-45b5-a135-3a82321bbac6, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.93MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.96MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.03MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-997.0KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-455.4KB/s(Youtube:不良林), server: zj.haojiahuo.ml, port: 30069, type: vmess, uuid: 0bff49b2-6e66-3572-897b-9d16ce612965, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /videos, ws-headers: {Host: zj.haojiahuo.ml}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-11.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-558.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-924.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
+      - 🇭🇰 香港-997.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-11.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-558.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-924.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
+      - 🇭🇰 香港-997.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-11.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-558.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-924.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
+      - 🇭🇰 香港-997.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-997.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-11.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-558.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-924.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
+      - 🇭🇰 香港-997.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-11.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-558.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-924.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
+      - 🇭🇰 香港-997.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-11.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-558.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-924.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
+      - 🇭🇰 香港-997.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-11.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-558.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-924.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
+      - 🇭🇰 香港-997.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
