--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.86MB/s(Youtube:不良林), server: 103.56.62.145, port: 3385, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.10MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-924.3KB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.37MB/s(Youtube:不良林), server: 103.56.62.145, port: 3385, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.85MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: f0de3134-aef4-45b5-a135-3a82321bbac6, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.93MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.96MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.03MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-997.0KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇨🇳 中国-455.4KB/s(Youtube:不良林), server: zj.haojiahuo.ml, port: 30069, type: vmess, uuid: 0bff49b2-6e66-3572-897b-9d16ce612965, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /videos, ws-headers: {Host: zj.haojiahuo.ml}}
+  - {name: 🇯🇵 日本-6.76MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.38MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.28MB/s(Youtube:不良林), server: 103.172.116.113, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-847.0KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-1.16MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.07MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-366.7KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇭🇰 香港-417.5KB/s(Youtube:不良林), server: 46.3.240.10, port: 443, type: vmess, uuid: a9f93c36-6b1f-4f68-c067-aa1cff941f97, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: biliroam, ws-headers: {Host: 46.3.240.10}}
+  - {name: 🇨🇳 中国-8.10MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5602, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-924.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
-      - 🇭🇰 香港-997.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-847.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-417.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.10MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-924.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
-      - 🇭🇰 香港-997.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-847.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-417.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.10MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-924.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
-      - 🇭🇰 香港-997.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-847.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-417.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.10MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-997.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-847.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-417.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-924.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
-      - 🇭🇰 香港-997.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-847.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-417.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.10MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-924.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
-      - 🇭🇰 香港-997.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-847.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-417.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.10MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-924.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
-      - 🇭🇰 香港-997.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-847.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-417.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.10MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-924.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
-      - 🇭🇰 香港-997.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-847.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-366.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-417.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.10MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
